--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+icon.png.import
 # Godot 4+ specific ignores
 .godot/
 
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+# export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -13,3 +14,11 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+# Test-related ignores
+Test/Metadata
+Test/Results
+Test/results.xml
+
+# exports folder
+.export
