--- a/.editorconfig
+++ b/.editorconfig
@@ -118,13 +118,13 @@ dotnet_naming_style.static_field_style.capitalization = camel_case
 dotnet_naming_style.static_field_style.required_prefix = s_
 
 # Instance fields are camelCase
-dotnet_naming_rule.instance_fields_should_be_camel_case.severity = suggestion
-dotnet_naming_rule.instance_fields_should_be_camel_case.symbols = instance_fields
-dotnet_naming_rule.instance_fields_should_be_camel_case.style = instance_field_style
+dotnet_naming_rule.instance_fields_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.instance_fields_should_be_pascal_case.symbols = instance_fields
+dotnet_naming_rule.instance_fields_should_be_pascal_case.style = instance_field_style
 
 dotnet_naming_symbols.instance_fields.applicable_kinds = field
 
-dotnet_naming_style.instance_field_style.capitalization = camel_case
+dotnet_naming_style.instance_field_style.capitalization = pascal_case
 
 # Private fields are camelCase and start with _
 dotnet_naming_rule.private_instance_fields_should_be_camel_case.severity = suggestion
